crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_invalid_guard_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_invalid_guard_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            33,
        ),
        range: 0..100,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 0..30,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..30,
                            node_index: NodeIndex(
                                9,
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 18..19,
                                    node_index: NodeIndex(
                                        3,
                                    ),
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 18..19,
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        range: 23..25,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    5,
                                                ),
                                                range: 24..25,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            8,
                                        ),
                                        range: 27..30,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    7,
                                                ),
                                                range: 27..30,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        21,
                    ),
                    range: 31..63,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 37..38,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 44..63,
                            node_index: NodeIndex(
                                20,
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 49..50,
                                    node_index: NodeIndex(
                                        14,
                                    ),
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 49..50,
                                            node_index: NodeIndex(
                                                13,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(
                                            17,
                                        ),
                                        range: 55..57,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    16,
                                                ),
                                                range: 56..57,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            19,
                                        ),
                                        range: 60..63,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    18,
                                                ),
                                                range: 60..63,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(
                        32,
                    ),
                    range: 64..99,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(
                                23,
                            ),
                            range: 70..71,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 77..99,
                            node_index: NodeIndex(
                                31,
                            ),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 82..83,
                                    node_index: NodeIndex(
                                        25,
                                    ),
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("y"),
                                            range: 82..83,
                                            node_index: NodeIndex(
                                                24,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                Yield(
                                    ExprYield {
                                        node_index: NodeIndex(
                                            28,
                                        ),
                                        range: 87..94,
                                        value: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        27,
                                                    ),
                                                    range: 93..94,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(
                                            30,
                                        ),
                                        range: 96..99,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(
                                                    29,
                                                ),
                                                range: 96..99,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match x:
2 |     case y if *a: ...
  |               ^^ Syntax Error: Starred expression cannot be used here
3 | match x:
4 |     case y if (*a): ...
  |


  |
2 |     case y if *a: ...
3 | match x:
4 |     case y if (*a): ...
  |                ^^ Syntax Error: Starred expression cannot be used here
5 | match x:
6 |     case y if yield x: ...
  |


  |
4 |     case y if (*a): ...
5 | match x:
6 |     case y if yield x: ...
  |               ^^^^^^^ Syntax Error: Yield expression cannot be used here
  |
